Fix for relative path handling.  Previously we were computing the relative path to save in the marker file as a relative URI (forward slashes, spaces escaped as %20, etc) but treating it as a native file path when reconstructing the index location at open() time.  This works on Unix-like platforms where there are no spaces or other special characters in the directory paths but can fail in other cases.  Now open() reconstructs the absolute *URI* from the relative one and then turns the result back into a File.